[34] Add webpacker install to CI instructions

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -51,5 +51,6 @@ jobs:
           DISABLE_SPRING: 1
         run: |
           cp config/database.ci.yml config/database.yml
+          bundle exec rails webpacker:install
           bundle exec rails db:schema:load
           bundle exec rspec --format progress
