--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -51,9 +51,7 @@ jobs:
           DISABLE_SPRING: 1
         run: |
           cp config/database.ci.yml config/database.yml
-          rm -rf node_modules
-          bundle exec rails assets:clobber
-          bundle exec yarn
-          bundle exec rails assets:precompile
+          yarn add @rails/webpacker
+          bundle exec rails webpacker:install
           bundle exec rails db:schema:load
           bundle exec rspec --format progress
