--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   test:
-    name: Run Tests and Rubocop
+    name: Test
     environment: alljobs
     runs-on: ubuntu-latest
 
@@ -44,10 +44,11 @@ jobs:
           sudo apt-get update && sudo apt-get -yqq install libpq-dev
           bundle install --jobs 4 --retry 3
 
-          - name: Analyze code
-        run: bundle exec rubocop
+      - name: Analyze code
+        run: |
+          bundle exec rubocop
 
-        - name: Run tests
+      - name: Run tests
         env:
           RAILS_ENV: test
           PGHOST: localhost
