--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,7 @@ AllCops:
     - 'bin/bundle'
     - 'db/migrate/*'
     - 'config/initializers/devise.rb'
+    - 'bin/*'
   NewCops: disable
 
 Metrics/BlockLength:
