--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ AllCops:
     - 'db/migrate/*'
     - 'config/initializers/devise.rb'
     - 'bin/*'
+    - 'Dockerfile'
   NewCops: disable
 
 Metrics/BlockLength:
