--- a/config/database.yml
+++ b/config/database.yml
@@ -1,22 +1,17 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  # port: 5439
+  port: 5439
 
 development:
   <<: *default
-  # database: alljobs_development
+  database: alljobs_development
 
-  username: <%= ENV['POSTGRES_USER'] %>
-  password: <%= ENV['POSTGRES_PASSWD'] %>
-  host: <%= ENV['POSTGRES_HOST'] %>
+  # username: <%= ENV['POSTGRES_USER'] %>
+  # password: <%= ENV['POSTGRES_PASSWD'] %>
+  # host: <%= ENV['POSTGRES_HOST'] %>
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
   database: alljobs_test
