--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -50,6 +50,7 @@ jobs:
 
       - name: Run tests
         env:
+          LOCAL_REDIS: redis://localhost:6379/1
           RAILS_ENV: test
           PGHOST: localhost
           DISABLE_SPRING: 1
