Update webpack install

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@
 yarn-debug.log*
 .yarn-integrity
 .vscode/settings.json
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
