--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-REDIS_URL=redis://redis:6379/1
-DATABASE_URL=postgres://postgres:postgres@db:5432/app_development
+REDIS_URL=redis://redis:6379/10
+DATABASE_URL=postgres://postgres:postgres@db:5432/alljobs_development
 RAILS_ENV=development
