--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,10 +1,6 @@
 name: Ruby
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: [push, pull_request]
 
 env:
   POSTGRES_DB: postgres
@@ -43,8 +39,6 @@ jobs:
         run: |
           sudo apt-get update && sudo apt-get -yqq install libpq-dev
           bundle install --jobs 4 --retry 3
-          cp config/database.ci.yml config/database.yml
-          bundle exec rails db:schema:load
 
       - name: Analyze code
         run: |
@@ -56,6 +50,8 @@ jobs:
           PGHOST: localhost
           DISABLE_SPRING: 1
         run: |
+          cp config/database.ci.yml config/database.yml
+          bundle exec rails db:schema:load
           bundle exec rspec --format progress
 
       - name: Publish code coverage
