--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,6 +1,15 @@
 name: Ruby
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+
+env:
+  POSTGRES_DB: postgres
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: password
 
 jobs:
   test:
@@ -30,7 +39,7 @@ jobs:
           ruby-version: 3.0.5
           bundler-cache: true
 
-      - name: Install dependencies and adjust database configuration
+      - name: Install dependencies
         run: |
           sudo apt-get update && sudo apt-get -yqq install libpq-dev
           bundle install --jobs 4 --retry 3
@@ -41,6 +50,7 @@ jobs:
 
       - name: Run tests
         env:
+          RAILS_ENV: test
           PGHOST: localhost
           DISABLE_SPRING: 1
         run: |
