--- a/config/database.ci.yml
+++ b/config/database.ci.yml
@@ -2,6 +2,6 @@ test:
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  database: postgres
-  username: postgres
-  password: password
+  database: <%= ENV["POSTGRES_DB"] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV["POSTGRES_PASSWORD"] %>
