return workflow envs

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  POSTGRES_DB: postgres
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: password
+
 jobs:
   test:
     name: Test
@@ -49,6 +54,8 @@ jobs:
           PGHOST: localhost
           DISABLE_SPRING: 1
         run: |
+          cp config/database.ci.yml config/database.yml
+          bundle exec rails db:schema:load
           bundle exec rspec --format progress
 
       - name: Publish code coverage
