--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ default: &default
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   # url: <%= ENV["DATABASE_URL"] %>
-  # port: 5439
+  port: 5439
 
 development:
   <<: *default
@@ -12,7 +12,6 @@ development:
 test:
   <<: *default
   database: alljobs_test
-  password: password
 
 production:
   <<: *default
