--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -55,10 +55,8 @@ jobs:
           DISABLE_SPRING: 1
         run: |
           cp config/database.ci.yml config/database.yml
-          yarn add @rails/webpacker
-          bundle exec rails webpacker:install
           bundle exec rails db:schema:load
-          NODE_OPTIONS='--openssl-legacy-provider' bundle exec rspec --format progress
+          bundle exec rspec --format progress
 
       - name: Publish code coverage
         uses: paambaati/codeclimate-action@v3.0.0
