--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ default: &default
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   # url: <%= ENV["DATABASE_URL"] %>
-  port: 5439
+  # port: 5439
 
 development:
   <<: *default
@@ -15,6 +15,6 @@ test:
 
 production:
   <<: *default
-  database: alljobs_production
-  username: alljobs
-  password: <%= ENV['ALLJOBS_DATABASE_PASSWORD'] %>
+  database: <%= ENV["POSTGRES_DB"] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV["POSTGRES_PASSWORD"] %>
