--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Run tests
         env:
-          RAILS_ENV: test
+          RAILS_ENV: production
           PGHOST: localhost
           DISABLE_SPRING: 1
         run: |
