--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,10 @@ development:
 
 test:
   <<: *default
-  database: alljobs_test
+  # database: alljobs_test
+  database: <%= ENV["POSTGRES_DB"] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV["POSTGRES_PASSWORD"] %>
 
 production:
   <<: *default
