--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,6 @@ test:
 
 production:
   <<: *default
-  database: <%= ENV["POSTGRES_DB"] %>
-  username: <%= ENV['POSTGRES_USER'] %>
-  password: <%= ENV["POSTGRES_PASSWORD"] %>
+  database: alljobs_production
+  username: alljobs
+  password: <%= ENV['ALLJOBS_DATABASE_PASSWORD'] %>
