--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -19,7 +19,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:12
+        image: postgres:12-alpine
         ports: ['5432:5432']
         env:
           POSTGRES_PASSWORD: password
@@ -31,7 +31,11 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update && sudo apt-get -yqq install libpq-dev
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
@@ -39,14 +43,11 @@ jobs:
           ruby-version: 3.0.5
           bundler-cache: true
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update && sudo apt-get -yqq install libpq-dev
-          bundle install --jobs 4 --retry 3
+      - name: Install Ruby dependencies
+        run: bundle install --jobs 4 --retry 3
 
       - name: Analyze code
-        run: |
-          bundle exec rubocop
+        run: bundle exec rubocop
 
       - name: Run tests
         env:
@@ -54,11 +55,10 @@ jobs:
           PGHOST: localhost
           DISABLE_SPRING: 1
         run: |
-          cp config/database.ci.yml config/database.yml
           bundle exec rails db:schema:load
           bundle exec rspec --format progress
 
       - name: Publish code coverage
-        uses: paambaati/codeclimate-action@v3.0.0
+        uses: paambaati/codeclimate-action@v6.0.0
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
