--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ default: &default
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   # url: <%= ENV["DATABASE_URL"] %>
-  port: 5439
+  # port: 5439
 
 development:
   <<: *default
@@ -11,7 +11,10 @@ development:
 
 test:
   <<: *default
-  database: alljobs_test
+  # database: alljobs_test
+  database: <%= ENV["POSTGRES_DB"] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV["POSTGRES_PASSWORD"] %>
 
 production:
   <<: *default
