--- a/config/database.yml
+++ b/config/database.yml
@@ -2,8 +2,8 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  # url: <%= ENV["DATABASE_URL"] %>
-  # port: 5439
+  url: <%= ENV["DATABASE_URL"] %>
+  #port: 5439
 
 development:
   <<: *default
