Adjust secret keys and JsonWebToken

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,6 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
-# Ignore env
-/.env.secret
-
 # Ignore bundler config.
 /.bundle
 
@@ -50,3 +47,5 @@ yarn-debug.log*
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+/config/master.key
