--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,22 +1,3 @@
-require: rubocop-rails
-
-inherit_mode:
-  merge:
-    - Exclude
-AllCops:
-  Exclude:
-    - 'bin/bundle'
-    - 'db/migrate/*'
-    - 'config/initializers/devise.rb'
-    - 'bin/*'
-    - 'Dockerfile'
-  NewCops: disable
-
-Metrics/BlockLength:
-  Enabled: false
-
-Style/Documentation:
-  Enabled: false
-
-Layout/EndOfLine:
-  Enabled: false
+# Omakase Ruby styling for Rails
+inherit_gem:
+  rubocop-rails-omakase: rubocop.yml
