--- a/config/database.yml
+++ b/config/database.yml
@@ -10,10 +10,10 @@ development:
 
 test:
   <<: *default
-  # database: alljobs_test
-  database: <%= ENV["POSTGRES_DB"] %>
-  username: <%= ENV['POSTGRES_USER'] %>
-  password: <%= ENV["POSTGRES_PASSWORD"] %>
+  database: alljobs_test
+  #database: <%= ENV["POSTGRES_DB"] %>
+  #username: <%= ENV['POSTGRES_USER'] %>
+  #password: <%= ENV["POSTGRES_PASSWORD"] %>
 
 production:
   <<: *default
