Add soliq_queue gem

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,13 +10,19 @@ development:
 
 test:
   <<: *default
-  # database: alljobs_test
-  database: <%= ENV["POSTGRES_DB"] %>
-  username: <%= ENV['POSTGRES_USER'] %>
-  password: <%= ENV["POSTGRES_PASSWORD"] %>
+  database: alljobs_test
+  # database: <%= ENV["POSTGRES_DB"] %>
+  # username: <%= ENV['POSTGRES_USER'] %>
+  # password: <%= ENV["POSTGRES_PASSWORD"] %>
 
 production:
-  <<: *default
-  database: alljobs_production
-  username: alljobs
-  password: <%= ENV['ALLJOBS_DATABASE_PASSWORD'] %>
+  primary:
+    <<: *default
+    database: alljobs_production
+    username: alljobs
+    password: <%= ENV['ALLJOBS_DATABASE_PASSWORD'] %>
+  queue:
+    <<: *default
+    database: alljobs_production_queue
+    migrations_paths: db/queue_migrate
+
