[149] change from sidekiq to solidqueue (#150)
* Add soliq_queue gem

* Update ruby version to 3.2.6

* Remove Sidekiq::Jobs from jobs

* Fix the tests after changed to solid_queue

* Drop table Admins

* Drop Table Delayed Jobs

* return database tests configs

* Remove old serializers

--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,13 @@ test:
   password: <%= ENV["POSTGRES_PASSWORD"] %>
 
 production:
-  <<: *default
-  database: alljobs_production
-  username: alljobs
-  password: <%= ENV['ALLJOBS_DATABASE_PASSWORD'] %>
+  primary:
+    <<: *default
+    database: alljobs_production
+    username: alljobs
+    password: <%= ENV['ALLJOBS_DATABASE_PASSWORD'] %>
+  queue:
+    <<: *default
+    database: alljobs_production_queue
+    migrations_paths: db/queue_migrate
+
