--- a/config/database.yml
+++ b/config/database.yml
@@ -3,14 +3,18 @@ default: &default
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   url: <%= ENV["DATABASE_URL"] %>
+  username: postgres
+  password: postgres
 
 development:
   <<: *default
   database: alljobs_development
+  host: localhost
 
 test:
   <<: *default
   # database: alljobs_test
+  # host: localhost
   database: <%= ENV["POSTGRES_DB"] %>
   username: <%= ENV['POSTGRES_USER'] %>
   password: <%= ENV["POSTGRES_PASSWORD"] %>
