--- a/config/database.yml
+++ b/config/database.yml
@@ -13,10 +13,11 @@ development:
 
 test:
   <<: *default
+  database: alljobs_test
   host: localhost
-  database: <%= ENV["POSTGRES_DB"] %>
-  username: <%= ENV['POSTGRES_USER'] %>
-  password: <%= ENV["POSTGRES_PASSWORD"] %>
+  #database: <%= ENV["POSTGRES_DB"] %>
+  #username: <%= ENV['POSTGRES_USER'] %>
+  #password: <%= ENV["POSTGRES_PASSWORD"] %>
 
 production:
   primary:
