--- a/config/database.yml
+++ b/config/database.yml
@@ -15,9 +15,7 @@ test:
   <<: *default
   database: alljobs_test
   host: localhost
-  #database: <%= ENV["POSTGRES_DB"] %>
-  #username: <%= ENV['POSTGRES_USER'] %>
-  #password: <%= ENV["POSTGRES_PASSWORD"] %>
+  password: postgres
 
 production:
   primary:
