--- a/config/database.yml
+++ b/config/database.yml
@@ -15,12 +15,9 @@ test:
   <<: *default
   database: alljobs_test
   host: localhost
-  username: postgres
-  password: postgres
-
-  #database: <%= ENV["POSTGRES_DB"] %>
-  #username: <%= ENV['POSTGRES_USER'] %>
-  #password: <%= ENV["POSTGRES_PASSWORD"] %>
+  database: <%= ENV["POSTGRES_DB"] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV["POSTGRES_PASSWORD"] %>
 
 production:
   primary:
