--- a/.github/workflows/rspec_and_rubocop_ci.yml
+++ b/.github/workflows/rspec_and_rubocop_ci.yml
@@ -7,9 +7,9 @@ on:
     branches: [main]
 
 env:
-  POSTGRES_DB: postgres
+  POSTGRES_DB: alljobs_test
   POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: password
+  POSTGRES_PASSWORD: postgres
 
 jobs:
   test:
@@ -22,7 +22,7 @@ jobs:
         image: postgres:12-alpine
         ports: ['5432:5432']
         env:
-          POSTGRES_PASSWORD: password
+          POSTGRES_PASSWORD: postgres
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
