--- a/.github/workflows/rspec_and_rubocop_ci.yml
+++ b/.github/workflows/rspec_and_rubocop_ci.yml
@@ -22,6 +22,7 @@ jobs:
         image: postgres:12-alpine
         ports: ['5432:5432']
         env:
+          POSTGRES_DB: alljobs_test
           POSTGRES_PASSWORD: postgres
         options: >-
           --health-cmd pg_isready
