--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "alljobs",
   "private": true,
   "dependencies": {
-    "@rails/actioncable": "^7.0.0",
-    "@rails/activestorage": "^7.0.0",
-    "@rails/ujs": "^7.0.0",
-    "@rails/webpacker": "5.4.4",
-    "rails_admin": "3.1.0",
+    "@rails/actioncable": "^8.0.100",
+    "@rails/activestorage": "^8.0.100",
+    "@rails/ujs": "^7.1.3-4",
+    "@rails/webpacker": "^5.4.4",
+    "rails_admin": "^3.3.0",
     "turbolinks": "^5.2.0",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^5"
+    "webpack-dev-server": "^5.2.0"
   }
 }
